# AutoMask-Refinery

./: .gitignore  README.md  organize_files.py  pyproject.toml  requirements.txt  review_details.csv
data/demo/: review_details.csv
data/demo/Necessities_ADCO/: 1.json  1.xml  2.json  2.xml
data/demo/Necessities_ActiPlus/: 2.json  2.xml  3.json  3.xml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  CUSTOM_YOLO.md  EXPORT_FORMATS.md  FRONTEND.md
src/: app.py  failed_mask_detector.py  generate_sam3_masks.py  organize_images.py
src/automask_refinery/: app.py  main.py
src/automask_refinery/config/: settings.py
src/automask_refinery/core/: detector.py  generator.py
src/automask_refinery/templates/: index.html
src/automask_refinery/utils/: geometry.py  logger.py  organizer.py
